[package]
name = "authzoo"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Shared functionality for configuration of jwt authentication for Rust services"

[dependencies]
anyhow = "1.0"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
toml = "1.1"
